test/iteLhs3.slq

(if true then x else x) := 2; /// error

